# keystone

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.backend  LICENSE-APACHE  LICENSE-MIT  README.md  fly.toml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  fly.toml  railway.toml
backend/migrations/: 001_initial.sql  002_auth_nonces.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs
backend/src/handlers/: alerts.rs  auth.rs  mod.rs  subscriptions.rs  users.rs  webhooks.rs
backend/src/middleware/: auth.rs
backend/src/models/: alert.rs  mod.rs  subscription.rs  user.rs
backend/src/services/: alert_worker.rs  email.rs  mod.rs  protocols.rs
benchmarks/gas-comparison/: README.md  run-benchmarks.sh
benchmarks/gas-comparison/solidity/: foundry.toml
benchmarks/gas-comparison/solidity/src/: SolidityBenchmark.sol
benchmarks/gas-comparison/solidity/test/: GasBenchmark.t.sol
benchmarks/gas-comparison/stylus/: Cargo.toml
benchmarks/gas-comparison/stylus/src/: lib.rs  main.rs
benchmarks/solidity/: VaultCalc.sol  benchmark.sh  foundry.toml
benchmarks/solidity/cache/: solidity-files-cache.json
content/threads/: 01-why-floating-point-fails.md  02-rounding-matters.md  03-health-factor-explained.md
crates/financial-calc/: Cargo.toml  README.md
crates/financial-calc/src/: amm.rs  day_count.rs  derivatives.rs  interest.rs  interpolation.rs  lib.rs  options.rs  percentage.rs  solver.rs  term_structure.rs  time_value.rs
crates/financial-calc/tests/: properties.rs
crates/keystone-defi/: Cargo.toml  README.md
crates/keystone-defi/src/: lib.rs
crates/precision-core/: Cargo.toml  README.md
crates/precision-core/benches/: arithmetic.rs  comparison.rs
crates/precision-core/src/: decimal.rs  error.rs  kani_proofs.rs  lib.rs  oracle.rs  proptest_impl.rs  rounding.rs  tolerance.rs
crates/precision-core/tests/: determinism.rs
crates/risk-metrics/: Cargo.toml  README.md
crates/risk-metrics/src/: health.rs  lib.rs  liquidation.rs  position.rs
crates/risk-metrics/tests/: properties.rs
crates/wasm-bindings/: Cargo.toml  README.md
crates/wasm-bindings/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/concepts/: decimal.md  errors.md  rounding.md  tolerance.md
docs/src/financial/: amm.md  derivatives.md  interest.md  options.md  percentages.md  time-value.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/reference/: benchmarks.md  determinism.md
docs/src/risk/: health-factor.md  liquidation.md  position.md
docs/src/sdk/: keystone-defi.md
docs/src/stylus/: examples.md  integration.md
docs/src/wasm/: api.md  browser.md
docs/theme/: analytics.js
examples/sp1-financial/: README.md
examples/sp1-financial/program/: Cargo.toml
examples/sp1-financial/program/src/: main.rs
examples/sp1-financial/script/: Cargo.toml
examples/sp1-financial/script/src/: main.rs
examples/stylus-amm/: Cargo.toml  README.md
examples/stylus-amm/src/: lib.rs  main.rs
examples/stylus-amm/tests/: motsu_tests.rs
examples/stylus-lending/: Cargo.toml  README.md
examples/stylus-lending/src/: lib.rs  main.rs
examples/stylus-lending/tests/: motsu_tests.rs
examples/stylus-options/: Cargo.toml  README.md  Stylus.toml
examples/stylus-options/src/: lib.rs  main.rs
examples/stylus-options/tests/: motsu_tests.rs
examples/stylus-oracle/: Cargo.toml  README.md  Stylus.toml
examples/stylus-oracle/src/: lib.rs  main.rs
examples/stylus-oracle/tests/: motsu_tests.rs
examples/stylus-vault/: Cargo.toml  README.md
examples/stylus-vault/src/: lib.rs  main.rs
examples/stylus-vault/tests/: motsu_tests.rs
grants/: arbitrum-dao-grant-proposal.md
scripts/: benchmark-local.sh  benchmark-stylus.sh  run-devnode.sh  setup-testnode.sh
