[package]
name = "keystone-api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Backend API for Dijkstra Keystone dashboard"

[[bin]]
name = "keystone-api"
path = "src/main.rs"

[lib]
name = "keystone_api"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit", "timeout"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
hex = "0.4"
alloy-primitives = "1.0"
alloy-signer = "0.9"
k256 = { version = "0.13", features = ["ecdsa"] }

# Cryptography (for webhook signature verification and Keccak256)
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"

# HTTP client (for webhooks, protocol APIs)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.8"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Pin time crate to version compatible with stable Rust
time = "=0.3.36"

# Shared precision library
precision-core = { path = "../crates/precision-core" }
financial-calc = { path = "../crates/financial-calc" }
risk-metrics = { path = "../crates/risk-metrics" }

[dev-dependencies]
tokio-test = "0.4"
