[package]
name = "precision-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Deterministic fixed-point arithmetic for financial computation"
readme = "README.md"

[features]
default = []
std = ["rust_decimal/std", "serde/std"]
proptest = ["dep:proptest"]
determinism-check = []

[dependencies]
rust_decimal = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
num-traits = { workspace = true }
proptest = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
criterion = { workspace = true }

[[bench]]
name = "arithmetic"
harness = false
