[package]
name = "risk-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Risk metrics and calculations for DeFi applications"
readme = "README.md"

[features]
default = []
std = ["precision-core/std", "financial-calc/std"]

[dependencies]
precision-core = { path = "../precision-core", version = "0.1.0-alpha.1" }
financial-calc = { path = "../financial-calc", version = "0.1.0-alpha.1" }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
