[package]
name = "stylus-amm-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
precision-core = { path = "../../crates/precision-core", default-features = false }
financial-calc = { path = "../../crates/financial-calc", default-features = false }
stylus-sdk = "0.10"
alloy-primitives = "1.3"

[features]
default = ["export-abi"]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "stylus-amm-example"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
