[package]
name = "stylus-lending-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
precision-core = { path = "../../crates/precision-core", default-features = false }
risk-metrics = { path = "../../crates/risk-metrics", default-features = false }
stylus-sdk = "0.6"
alloy-primitives = "0.7"

[features]
default = ["export-abi"]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
