[package]
name = "sp1-financial-program"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
precision-core = { path = "../../../crates/precision-core", default-features = false }
financial-calc = { path = "../../../crates/financial-calc", default-features = false }
risk-metrics = { path = "../../../crates/risk-metrics", default-features = false }
sp1-zkvm = "4.0"
serde = { version = "1", default-features = false, features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
