[package]
name = "sp1-financial-script"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
sp1-sdk = "4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
bincode = "1"

[build-dependencies]
sp1-build = "4.0"
